Restore double margin to image-thumb bottom spacing. Fixes #164

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1602,7 +1602,7 @@ select {
   background-color: #fff;
   background-repeat: no-repeat;
   background-position: right center;
-  background-image: url('../images/select_arrow.png?1378464833');
+  background-image: url('../images/select_arrow.png?1378726040');
   height: 2.5em;
 }
 /* line 237, ../sass/framework/atoms/_forms.scss */
@@ -1682,7 +1682,7 @@ select[size="1"] {
   select,
   select[size="0"],
   select[size="1"] {
-    background-image: url('../images/select_arrow.png?1378464833');
+    background-image: url('../images/select_arrow.png?1378726040');
     background-repeat: no-repeat;
     background-position: right center;
     padding-right: 20px;
@@ -2691,7 +2691,7 @@ li.pager__item--next {
 */
 /* line 52, ../sass/framework/molecules/_images.scss */
 .img-thumb {
-  margin-bottom: 0.833em;
+  margin-bottom: 1.666em;
 }
 
 /* ##Ratios */
@@ -2983,7 +2983,7 @@ pre code {
   position: relative;
   background-repeat: no-repeat;
   background-position: 0 0;
-  background-image: url('../images/site-logo.png?1378464471');
+  background-image: url('../images/site-logo.png?1378726040');
   width: 200px;
   height: 80px;
 }
@@ -3025,16 +3025,16 @@ pre code {
 }
 /* line 22, ../sass/framework/compounds/_site-credit.scss */
 .no-svg .site-credit {
-  background-image: url('../images/site-credit.png?1378464833');
+  background-image: url('../images/site-credit.png?1378726040');
 }
 
 /* line 28, ../sass/framework/compounds/_site-credit.scss */
 .site-credit--dark {
-  background-image: url('../images/site-credit--dark.svg?1378456029');
+  background-image: url('../images/site-credit--dark.svg?1378726040');
 }
 /* line 31, ../sass/framework/compounds/_site-credit.scss */
 .no-svg .site-credit--dark {
-  background-image: url('../images/site-credit--dark.png?1378464833');
+  background-image: url('../images/site-credit--dark.png?1378726040');
 }
 
 /* ==========================================================================
