--- a/assets/sass/framework/molecules/_images.scss
+++ b/assets/sass/framework/molecules/_images.scss
@@ -50,7 +50,7 @@
 */
 
 .img-thumb {
-    margin-bottom: $baseLineHeight/2;
+    margin-bottom: $baseLineHeight;
 }
 
 /* ##Ratios */
